Проверяем есть ли видео потоки

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -362,6 +362,6 @@ message.resolution.selected.no.audio=Recommended settings for good compression: 
 If you want you can choose another settings manually, but in that way i can''t guarantee good result
 message.resolution.cant.be.increased=You can only decrease the video quality. Your video quality is {0}, so you need to choose \
 quality lower than that
-message.no.video.streams=\u203c\ufe0fYour file doesn't contain any video stream, so i can't make it square
+message.no.video.streams=\u203c\ufe0fYour file doesn't contain any video stream, so i can't handle it
 message.no.audio.in.video=Your video doesn't contain audio so you can't choose audio settings because it has no sense
 message.video.screenshot.out.of.range=\u2757\ufe0fVideo length is <b>{0}</b>, but you have specified time <b>{1}</b>. Taking screenshot impossible with this options
