--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -361,6 +361,6 @@ message.resolution.selected.no.audio=Рекомендуемые настройк
 При желании вы можете выбрать другие настройки вручную, но в этом случае я не могу гарантировать хороший результат
 message.resolution.cant.be.increased=Вы можете только уменьшить качество. Качество вашего видео {0}p, поэтому \
 вам надо выбрать качество меньше чем это
-message.no.video.streams=\u203c\ufe0fВаш файл не содержит видеопотока, поэтому я не могу сделать его квадратным
+message.no.video.streams=\u203c\ufe0fВаш файл не содержит видеопотока, поэтому я не могу его обработать
 message.no.audio.in.video=Ваше видео не содержит аудио, поэтому вы не можете выбрать найтройки для аудио, так как это не имеет смысла
 message.video.screenshot.out.of.range=\u2757\ufe0fДлина видео <b>{0}</b>, но вы выбрали время <b>{1}</b>. Получение скриншота невозможно
